# simple_compiler

./: .gitignore  .travis.yml  CMakeLists.gtest.txt.in  CMakeLists.textbox.txt.in  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  ast.h  ast.hpp  calc.y  codegen.h  codegen_x86.h  example.txt  example.var.txt  frontend.y  move.sed  test.m.c  var.y
.circleci/: config.yml
src/: SimpleCompiler.cpp  ast.h  ast.t.cpp  codegen.h  codegen_x86.cpp  codegen_x86.h  compile_commands.json  display.cpp  display.h  frontend.h  frontend.y
test/: example.var.txt
